<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

        <group>
                <item
                    android:id="@+id/share"
                    android:icon="@drawable/share_1"
                    android:title="@string/share" />

                <item
                    android:id="@+id/about"
                    android:icon="@drawable/about_us"
                    android:title="@string/about_us" />

                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />


                <item
                    android:id="@+id/notification"
                    android:icon="@drawable/bell"
                    android:title="@string/notification" />
        </group>

        <item android:title="">
                <menu>
                        <item
                            android:id="@+id/logout"
                            android:icon="@drawable/logout"
                            android:title="@string/log_out" />
                </menu>
        </item>




</menu>